Update new version check model and implement imposter
